[package]
name = "value-log"
description = "Value log implementation for key-value separated LSM storage"
license = "MIT OR Apache-2.0"
version = "0.0.2"
edition = "2021"
rust-version = "1.74.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/value-log"
homepage = "https://github.com/fjall-rs/value-log"
keywords = ["database", "lsmt", "lsm", "wisckey", "key-value"]
categories = ["data-structures", "database-implementations", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "value_log"
path = "src/lib.rs"

[features]
default = ["lz4"]
lz4 = ["dep:lz4_flex"]
serde = ["dep:serde"]

[dependencies]
byteorder = "1.5.0"
crc32fast = "1.4.2"
log = "0.4.21"
lz4_flex = { version = "0.11.3", optional = true }
min-max-heap = "1.3.0"
path-absolutize = "3.1.1"
quick_cache = "0.5.1"
serde = { version = "1.0.200", optional = true, features = ["derive"] }
tempfile = "3.10.1"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.2"
rand = "0.8.5"
test-log = "0.2.15"

[[bench]]
name = "value_log"
harness = false
path = "benches/value_log.rs"
required-features = ["lz4"]
