[package]
name = "value-log"
description = "Value log implementation for key-value separated LSM storage"
license = "MIT OR Apache-2.0"
version = "1.0.0-pre.2"
edition = "2021"
rust-version = "1.74.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/value-log"
homepage = "https://github.com/fjall-rs/value-log"
keywords = ["database", "blobdb", "lsm", "wisckey", "key-value"]
categories = ["data-structures", "database-implementations", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "value_log"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
ahash = "0.8.11"
byteorder = "1.5.0"
crc32fast = "1.4.2"
log = "0.4.21"
lz4_flex = { version = "0.11.3", optional = true }
min-max-heap = "1.3.0"
miniz_oxide = { version = "0.7.3", optional = true }
path-absolutize = "3.1.1"
quick_cache = { version = "0.6.0", default-features = false, features = [
  "ahash",
] }
serde = { version = "1.0.200", optional = true, features = ["derive", "rc"] }
tempfile = "3.10.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
test-log = "0.2.15"

[[bench]]
name = "value_log"
harness = false
path = "benches/value_log.rs"
